<resources>
    <string name="app_name">Moozic</string>
    <string name="musicplayer">Moozic!</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="favourites_button">Favourites</string>
    <string name="playlist_button">Playlists</string>
    <string name="all_songs">My Music</string>
    <string name="welcome_to_the_world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="share_btn">Share</string>
    <string name="timer_btn">Timer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="app_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="moozic_feel_the_rhythm">Moozic:Feel the Rhythm</string>
    <string name="song_album">Song Album</string>
    <string name="min_2">2 Minutes</string>
    <string name="min_10">10 Minutes</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>

</resources>