<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/moozic_icon"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/songNameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/song_duration_MV"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:gravity="center_horizontal"
        android:singleLine="true"
        />
    <TextView
        android:id="@+id/song_duration_MV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        />
    <TextView
        android:id="@+id/songAlbumMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/song_album"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/song_duration_MV"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        />
</RelativeLayout>