<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/min_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivTimer_bs4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_2"
            />
        <TextView
            android:id="@+id/tv_bs4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivTimer_bs1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_10"
            />
        <TextView
            android:id="@+id/tv_bs1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_10"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivTimer_bs2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_15"
            />
        <TextView
            android:id="@+id/tv_bs2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivTimer_bs3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:tint="@color/cool_pink"
            android:layout_margin="8dp"
            android:contentDescription="@string/min_60"
            />
        <TextView
            android:id="@+id/tv_bs3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp"
            />
    </LinearLayout>


</LinearLayout>